Frankbelford/uatv1ba/force-app/main/default/objects/Job_Order_Comments__c/Job_Order_Comments__c.object-meta.xml
<CustomObject>
    <label>Job Order Comments</label>
    <nameField>
        <displayFormat>JOCN-{00000000}</displayFormat>
        <label>Job Order Comments No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Order Comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>