Frankbelford/uatv1ba/force-app/main/default/objects/Job_Order_Comments__c/fields/Comment_Text__c.field-meta.xml
<CustomField>
    <fullName>Comment_Text__c</fullName>
    <label>Comment Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>