Frankbelford/uatv1ba/force-app/main/default/objects/Job_Order_Comments__c/fields/Comment_Type__c.field-meta.xml
<CustomField>
    <fullName>Comment_Type__c</fullName>
    <label>Comment Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
                <default>true</default>
                <label>Internal</label>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>