Frankbelford/uatv1ba/force-app/main/default/objects/Job_Order_Comments__c/fields/Job_Order__c.field-meta.xml
<CustomField>
    <fullName>Job_Order__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Job Order</label>
    <referenceTo>sirenum__JobOrder__c</referenceTo>
    <relationshipLabel>Job Order Comments</relationshipLabel>
    <relationshipName>Job_Order_Comments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>